added search parameter to association filter endpoint
